# remote-build-queue

./: .gitignore  Makefile  README.md  default.nix  flake.nix  meson.build
include/: concat-strings.hh  dequeue.hh  event.hh  job.hh  postgres.hh  uuid.hh
include/enqueue/: build-requirements.hh  main.hh  postgres.hh
include/remote-build-queue/: machines.hh  main.hh  postgres.hh  worker.hh
nix/: module.nix  overlay.nix  postgres.nix
sql/: api.sql  db.sql  job.sql  schema.sql
src/enqueue/: build-requirements.cc  enqueue.cc  main.cc  postgres.cc
src/lib/: concat-strings.cc  dequeue.cc  event.cc  job.cc  postgres.cc
src/remote-build-queue/: args.hh  machines.cc  main.cc  postgres.cc  remote-build-queue.cc  worker.cc
